--- a/noticias.html
+++ b/noticias.html
@@ -22,93 +22,88 @@
     </header>
     <main>
         <section>
-            <h1>Últimas Notícias</h1>
-            <p>Fique por dentro das últimas novidades do mundo dos tênis. Lançamentos, tendências e tudo que acontece no
-                universo sneaker.</p>
-            <div class="card-noticia-principal">
-                <img src="">
-                <h3>Nike lança nova coleção Air Max 2024</h3>
-                <p></p>
-                <a href=""></a>
+            <div class="destaque">
+                <h1>Últimas Notícias</h1>
+                <p>Fique por dentro das últimas novidades do mundo dos tênis. <br>
+                    Lançamentos, tendências e tudo que acontece no
+                    universo sneaker.</p>
             </div>
-            <div class="card-noticia">
 
+            <div class="card-noticia principal">
                 <img src="rapaz.png">
                 <div class="card-body">
+                    <h5>Lançamentos</h5>
+                    <h3>Nike lança nova coleção Air Max 2024</h3>
+                    <p>A Nike apresenta sua mais nova linha de tênis Air Max com tecnologia revolucionária de
+                        amortecimento e design futurista que promete redefinir o conceito de conforto.</p>
+                    <a href="#">
+                        <img src="https://raw.githubusercontent.com/lucide-icons/lucide/main/icons/external-link.svg"class="icone" />
+                        Fonte
+                    </a>
+                </div>
+            </div>
+            <div class="card-noticia">
+                <img src="rapaz.png">
+                <div class="card-body">
+                    <h5>Sustentabilidade</h5>
                     <h3>Adidas anuncia parceria sustentável</h3>
                     <p>
                         A marca alemã firma compromisso com sustentabilidade ao anunciar que
                         todos os seus tênis serão feitos com materiais reciclados até 2025,
                         revolucionando a indústria.
                     </p>
-                    <a href="#">Fonte</a>
+                    <a href="#">
+                        <img src="https://raw.githubusercontent.com/lucide-icons/lucide/main/icons/external-link.svg"
+                            class="icone" />
+                        Fonte
+                    </a>
                 </div>
             </div>
             <div class="card-noticia">
                 <img />
                 <div class="card-body">
-
+                    <h5>História</h5>
                     <h3>Jordan Brand celebra 40 anos</h3>
                     <p>A icônica marca de Michael Jordan completa quatro décadas de história com lançamentos especiais e
                         colaborações exclusivas que homenageiam sua trajetória no basquete.</p>
-                    <a href=""></a>
+                    <a href="#">
+                        <img src="https://raw.githubusercontent.com/lucide-icons/lucide/main/icons/external-link.svg"
+                            class="icone" />
+                        Fonte
+                    </a>
                 </div>
 
             </div>
             <div class="card-noticia">
                 <img />
-
-                <div>
+                <div class="card-body">
+                    <h5>Tendências</h5>
                     <h3>Tendências de tênis para 2025</h3>
                     <p>Especialistas em moda revelam as principais tendências em calçados esportivos para este ano,
                         destacando cores vibrantes e tecnologias inovadoras de performance.</p>
-                    <a href=""></a>
+                    <a href="#">
+                        <img src="https://raw.githubusercontent.com/lucide-icons/lucide/main/icons/external-link.svg"
+                            class="icone" />
+                        Fonte
+                    </a>
                 </div>
 
             </div>
             <div class="card-noticia">
                 <img>
                 <div class="card-body">
+                    <h5>Tecnologia</h5>
                     <h3>Puma investe em tecnologia wearable</h3>
                     <p>A marca alemã anuncia investimento em tênis inteligentes com sensores integrados que monitoram
                         performance e saúde dos atletas em tempo real.</p>
-                    <a href=""></a>
+                    <a href="#">
+                        <img src="https://raw.githubusercontent.com/lucide-icons/lucide/main/icons/external-link.svg"
+                            class="icone" />
+                        Fonte
+                    </a>
                 </div>
-
             </div>
         </section>
-        <!-- <section>
-            <h2>Por que escolher a Air&Game?</h2>
-            <div>
-                <img src=""/>
-                <h3>Entrega Rápida</h3>
-                <p>Receba seus tênis em até 3 dias úteis em todo o Brasil</p>
-            </div>
-             <div>
-                <img src=""/>
-                <h3>Garantia Total</h3>
-                <p>30 dias para troca e devolução sem complicações</p>
-            </div>
-             <div>
-                <img src=""/>
-                <h3>Pagamento Fácil</h3>
-                <p>Parcele em até 12x sem juros no cartão de crédito</p>
-            </div>
-        </section>
-        <section>
-            <h1>Air Game</h1>
-            <h1>Os Melhores Tênis do Mundo</h1>
-            <p>Descubra nossa coleção exclusiva de tênis das melhores marcas. Qualidade, estilo e conforto para todos os momentos da sua vida.</p>
-            <a href="">Ver Produtos</a>
-            <a href="">Cadastra-se</a>
-        </section>
-        <section>
-            <h1>Air Game</h1>
-            <h1>Os Melhores Tênis do Mundo</h1>
-            <p>Descubra nossa coleção exclusiva de tênis das melhores marcas. Qualidade, estilo e conforto para todos os momentos da sua vida.</p>
-            <a href="">Ver Produtos</a>
-            <a href="">Cadastra-se</a>
-        </section> -->
     </main>
     <footer>
 
