feat: paginas de cadastro e contato criadas sem footer

--- a/noticias.html
+++ b/noticias.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Notícias</title>
+        <link rel="stylesheet" href="./css/base.css">
+    <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/noticias.css">
 </head>
 
@@ -12,12 +14,11 @@
     <header>
         <img src="./imagens/rapaz" alt="logo">
         <nav>
-
             <a href="">Início</a>
             <a href="">Produtos</a>
-            <a href="">Notícias</a>
-            <a href="">Cadastro</a>
-            <a href="">Contato</a>
+            <a href="./noticias.html">Notícias</a>
+            <a href="./cadastro.html">Cadastro</a>
+            <a href="./contato.html">Contato</a>
         </nav>
     </header>
     <main>
@@ -37,7 +38,8 @@
                     <p>A Nike apresenta sua mais nova linha de tênis Air Max com tecnologia revolucionária de
                         amortecimento e design futurista que promete redefinir o conceito de conforto.</p>
                     <a href="#">
-                        <img src="https://raw.githubusercontent.com/lucide-icons/lucide/main/icons/external-link.svg"class="icone" />
+                        <img src="https://raw.githubusercontent.com/lucide-icons/lucide/main/icons/external-link.svg"
+                            class="icone" />
                         Fonte
                     </a>
                 </div>
@@ -106,7 +108,10 @@
         </section>
     </main>
     <footer>
-
+        <div>
+            itens
+        </div>
+        <p>© 2025 Air&Game. Todos os direitos reservados.</p>
     </footer>
 </body>
 
