feat: pagina de produtos feita

--- a/cadastro.html
+++ b/cadastro.html
@@ -15,7 +15,7 @@
         <img src="./imagens/rapaz" alt="logo">
         <nav>
             <a href="">Início</a>
-            <a href="">Produtos</a>
+            <a href="./produtos.html">Produtos</a>
             <a href="./noticias.html">Notícias</a>
             <a href="./cadastro.html">Cadastro</a>
             <a href="./contato.html">Contato</a>
@@ -85,7 +85,7 @@
                             <label>Observacões</label>
                             <textarea rows="5" cols="33" placeholder="Informações adicionais (opcional)"></textarea>
                         </div>
-                        <button class="btn-formulario" type="submit">Cadastrar</button>
+                        <button class="btn" type="submit">Cadastrar</button>
                     </form>
                 </div>
 
