--- a/contato.html
+++ b/contato.html
@@ -15,7 +15,7 @@
         <img src="./imagens/rapaz" alt="logo">
         <nav>
             <a href="">Início</a>
-            <a href="">Produtos</a>
+            <a href="./produtos.html">Produtos</a>
             <a href="./noticias.html">Notícias</a>
             <a href="./cadastro.html">Cadastro</a>
             <a href="./contato.html">Contato</a>
@@ -23,84 +23,81 @@
     </header>
     <main>
         <section>
+            <div class="destaque">
+                <h1>Fale Conosco</h1>
+                <p>Tem alguma dúvida, sugestão ou precisa de ajuda? Entre em contato conosco e teremos prazer em
+                    atendê-lo!</p>
+            </div>
             <div class="container">
-                <div class="destaque">
-                    <h1>Fale Conosco</h1>
-                    <p>Tem alguma dúvida, sugestão ou precisa de ajuda? Entre em contato conosco e teremos prazer em
-                        atendê-lo!</p>
-                </div>
-
-                <div class="principal">
-                    <form class="formulario">
-                        <h2>Envie sua Mensagem</h2>
-                        <div class="campo">
-                            <label>Seu E-mail</label>
-                            <input type="email" placeholder="seuemail@.com">
-                        </div>
-                        <div class="campo">
-                            <label>Assunto</label>
-                            <input type="text" placeholder="Qual motivo do seu contato?">
-                        </div>
-
-                        <div class="campo">
-                            <label>Mensagem</label>
-                            <textarea rows="5" cols="33"
-                                placeholder="Descreva sua dúvida, solicitação ou sugestão..."></textarea>
-                        </div>
-                        <button class="btn-formulario" type="submit">Enviar Mensagem</button>
-                    </form>
-
-                    <div class="about">
-                        <div class="informacoes-contato">
-                            <h2>Informações de Contato</h2>
-
-                            <div>
-                                <h5>E-mail</h5>
-                                <p>contato@airgame.com</p>
-                                <p>vendas@airgame.com</p>
-                            </div>
-                            <div>
-                                <h5>Telefone</h5>
-                                <p>(11) 9999-9999</p>
-                                <p>(11) 8888-8888</p>
-                            </div>
-                            <div>
-                                <h5>Endereço</h5>
-                                <p>Rua dos Tênis, 123</p>
-                                <p>Vila Sneaker - São Paulo, SP</p>
-                                <p>CEP: 01234-567</p>
-                            </div>
-                            <div>
-                                <h5>Horário de Atendimento</h5>
-                                <p>Segunda a Sexta: 9h às 18h</p>
-                                <p>Sábado: 9h às 14h</p>
-                                <p>Domingo: Fechado</p>
-                            </div>
-                        </div>
-                        <div class="perguntas-frequentes">
-                            <h2>Perguntas Frequentes</h2>
-                            <div>
-                                <h5>Como faço para trocar um produto?</h5>
-                                <p>Você tem 30 dias para solicitar a troca. Entre em contato conosco com o número do
-                                    pedido.</p>
-                            </div>
-                            <div>
-                                <h5>Qual o prazo de entrega?</h5>
-                                <p>O prazo varia de 3 a 7 dias úteis, dependendo da sua localização.</p>
-                                <p>Vila Sneaker - São Paulo, SP</p>
-                            </div>
-                            <div>
-                                <h5>Vocês têm loja física?</h5>
-                                <p>Sim! Nossa loja fica na Rua dos Tênis, 123 - Vila Sneaker, São Paulo.</p>
-                            </div>
-                        </div>
-                        <div class="atendimento">
-                            <h2>Atendimento Rápido</h2>
-                            <p>Respondemos todas as mensagens em até 24 horas!</p>
-                            <p>⚡</p>
-                        </div>
-
+                <form class="formulario">
+                    <h2>Envie sua Mensagem</h2>
+                    <div class="campo">
+                        <label>Seu E-mail</label>
+                        <input type="email" placeholder="seuemail@.com">
                     </div>
+                    <div class="campo">
+                        <label>Assunto</label>
+                        <input type="text" placeholder="Qual motivo do seu contato?">
+                    </div>
+
+                    <div class="campo">
+                        <label>Mensagem</label>
+                        <textarea rows="5" cols="33"
+                            placeholder="Descreva sua dúvida, solicitação ou sugestão..."></textarea>
+                    </div>
+                    <button class="btn" type="submit">Enviar Mensagem</button>
+                </form>
+
+                <div class="about">
+                    <div class="informacoes-contato">
+                        <h2>Informações de Contato</h2>
+
+                        <div>
+                            <h5>E-mail</h5>
+                            <p>contato@airgame.com</p>
+                            <p>vendas@airgame.com</p>
+                        </div>
+                        <div>
+                            <h5>Telefone</h5>
+                            <p>(11) 9999-9999</p>
+                            <p>(11) 8888-8888</p>
+                        </div>
+                        <div>
+                            <h5>Endereço</h5>
+                            <p>Rua dos Tênis, 123</p>
+                            <p>Vila Sneaker - São Paulo, SP</p>
+                            <p>CEP: 01234-567</p>
+                        </div>
+                        <div>
+                            <h5>Horário de Atendimento</h5>
+                            <p>Segunda a Sexta: 9h às 18h</p>
+                            <p>Sábado: 9h às 14h</p>
+                            <p>Domingo: Fechado</p>
+                        </div>
+                    </div>
+                    <div class="perguntas-frequentes">
+                        <h2>Perguntas Frequentes</h2>
+                        <div>
+                            <h5>Como faço para trocar um produto?</h5>
+                            <p>Você tem 30 dias para solicitar a troca. Entre em contato conosco com o número do
+                                pedido.</p>
+                        </div>
+                        <div>
+                            <h5>Qual o prazo de entrega?</h5>
+                            <p>O prazo varia de 3 a 7 dias úteis, dependendo da sua localização.</p>
+                            <p>Vila Sneaker - São Paulo, SP</p>
+                        </div>
+                        <div>
+                            <h5>Vocês têm loja física?</h5>
+                            <p>Sim! Nossa loja fica na Rua dos Tênis, 123 - Vila Sneaker, São Paulo.</p>
+                        </div>
+                    </div>
+                    <div class="atendimento">
+                        <h2>Atendimento Rápido</h2>
+                        <p>Respondemos todas as mensagens em até 24 horas!</p>
+                        <p>⚡</p>
+                    </div>
+
                 </div>
             </div>
         </section>
