--- a/noticias.html
+++ b/noticias.html
@@ -15,7 +15,7 @@
         <img src="./imagens/rapaz" alt="logo">
         <nav>
             <a href="">Início</a>
-            <a href="">Produtos</a>
+            <a href="./produtos.html">Produtos</a>
             <a href="./noticias.html">Notícias</a>
             <a href="./cadastro.html">Cadastro</a>
             <a href="./contato.html">Contato</a>
