adicionando um badge de porcentagem de desconto e categoria nos produtos

--- a/produtos.html
+++ b/produtos.html
@@ -32,7 +32,11 @@
 
             <div class="container">
                 <div class="card-produto">
-                    <img src="./imagens/rapaz">
+                    <div class="header">
+                        <span class="badge-porcentagem">25% OFF</span>
+                        <span class="badge-categoria">Casual</span>
+                        <img src="./imagens/rapaz">
+                    </div>
                     <div class="body">
                         <h3>Nike Air Max 270</h3>
                         <p>Tênis casual com tecnologia Air Max para máximo conforto</p>
@@ -45,7 +49,11 @@
 
                 </div>
                 <div class="card-produto">
-                    <img src="./imagens/rapaz">
+                    <div class="header">
+                        <span class="badge-porcentagem">25% OFF</span>
+                        <span class="badge-categoria">Running</span>
+                        <img src="./imagens/rapaz">
+                    </div>
                     <div class="body">
                         <h3>Adidas Ultraboost 22</h3>
                         <p>Tênis de corrida com tecnologia Boost para performance superior</p>
@@ -58,7 +66,11 @@
 
                 </div>
                 <div class="card-produto">
-                    <img src="./imagens/rapaz">
+                    <div class="header">
+                        <span class="badge-porcentagem">19% OFF</span>
+                        <span class="badge-categoria">Basketball</span>
+                        <img src="./imagens/rapaz">
+                    </div>
                     <div class="body">
                         <h3>Jordan 1 Retro High</h3>
                         <p>Clássico tênis de basquete com design icônico</p>
@@ -71,7 +83,11 @@
 
                 </div>
                 <div class="card-produto">
-                    <img src="./imagens/rapaz">
+                    <div class="header">
+                        <span class="badge-porcentagem">25% OFF</span>
+                        <span class="badge-categoria">Lifestyle</span>
+                        <img src="./imagens/rapaz">
+                    </div>
                     <div class="body">
                         <h3>Puma RS-X</h3>
                         <p>Tênis casual com tecnologia Air Max para máximo conforto</p>
@@ -84,7 +100,11 @@
 
                 </div>
                 <div class="card-produto">
-                    <img src="./imagens/rapaz">
+                    <div class="header">
+                        <span class="badge-porcentagem">20% OFF</span>
+                        <span class="badge-categoria">Casual</span>
+                        <img src="./imagens/rapaz">
+                    </div>
                     <div class="body">
                         <h3>New Balance 990v5</h3>
                         <p>Tênis lifestyle com design futurista e cores vibrantes</p>
@@ -97,7 +117,11 @@
 
                 </div>
                 <div class="card-produto">
-                    <img src="./imagens/rapaz">
+                    <div class="header">
+                        <span class="badge-porcentagem">25% OFF</span>
+                        <span class="badge-categoria">Skate</span>
+                        <img src="./imagens/rapaz">
+                    </div>
                     <div class="body">
                         <h3>Vans Old Skool</h3>
                         <p>Clássico tênis de skate com design atemporal</p>
