reformulando pagina na de noticias pra usar grid e colocando imagens e link das noticias

--- a/produtos.html
+++ b/produtos.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/produtos.css">
+    <link rel="stylesheet" href="./css/footer.css">
 </head>
 
 <body>
@@ -137,10 +138,37 @@
         </section>
     </main>
     <footer>
-        <div>
-            itens
+        <div class="container">
+            <div class="grid">
+                <div class="identidade-visual">
+                    <h5 class="marca">Air&Game</h5>
+                    <p>Os melhores tênis do mundo com qualidade, estilo e conforto garantidos.</p>
+                </div>
+                <div>
+                    <h5>Links Rápidos</h5>
+                    <div class="links">
+                        <a href="">Início</a>
+                        <a href="./produtos.html">Produtos</a>
+                        <a href="./noticias.html">Notícias</a>
+                        <a href="./cadastro.html">Cadastro</a>
+                        <a href="./contato.html">Contato</a>
+                    </div>
+                </div>
+                <div>
+                    <h5>Atendimento</h5>
+                    <p>Trocas e Devoluções</p>
+                    <p>Política de Privacidade</p>
+                    <p>Termos de Uso</p>
+                </div>
+                <div>
+                    <h5>Contato</h5>
+                    <p>contato@airgame.com</p>
+                    <p>(28) 9999-9999</p>
+                    <p>Alegre - ES</p>
+                </div>
+            </div>
+            <p>© 2025 Air&Game. Todos os direitos reservados.</p>
         </div>
-        <p>© 2025 Air&Game. Todos os direitos reservados.</p>
     </footer>
 </body>
 
