pagina de produtos pronta  e responsiva

--- a/produtos.html
+++ b/produtos.html
@@ -5,21 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produtos</title>
+    <link rel="shortcut icon" href="./imagens/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/produtos.css">
     <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/produtos.css">
 </head>
 
 <body>
     <header>
-        <img src="./imagens/rapaz" alt="logo">
+        <img class="logo" src="./imagens/logo.svg" alt="logo">
+        <input type="checkbox" id="menu-toggle">
+        <label for="menu-toggle" class="menu-icon">&#9776;</label>
         <nav>
-            <a href="">Início</a>
+            <a href="./home.html">Início</a>
             <a href="./produtos.html">Produtos</a>
             <a href="./noticias.html">Notícias</a>
             <a href="./cadastro.html">Cadastro</a>
             <a href="./contato.html">Contato</a>
+            <a href="./sobreProjeto.html">Sobre o Projeto</a>
         </nav>
     </header>
     <main>
@@ -36,7 +40,7 @@
                     <div class="header">
                         <span class="badge-porcentagem">25% OFF</span>
                         <span class="badge-categoria">Casual</span>
-                        <img src="./imagens/rapaz">
+                        <img src="./imagens/produtos/NikeAirMax270/Preto/Tênis Nike Air Max 270 Masculino - Preto.jpg">
                     </div>
                     <div class="body">
                         <h3>Nike Air Max 270</h3>
@@ -45,7 +49,7 @@
                             <p class="por">R$ 599,99</p>
                             <p class="de">R$ 799,99</p>
                         </div>
-                        <button class="btn">Comprar</button>
+                        <a href="./produtos-detalhamento/nike-air-270.html" class="btn">Ver Detalhes</a>
                     </div>
 
                 </div>
@@ -53,7 +57,7 @@
                     <div class="header">
                         <span class="badge-porcentagem">25% OFF</span>
                         <span class="badge-categoria">Running</span>
-                        <img src="./imagens/rapaz">
+                        <img src="./imagens/produtos/AdidasUltraboost22/Azul/Adidas Ultraboost 22 - Azul-1.jpg">
                     </div>
                     <div class="body">
                         <h3>Adidas Ultraboost 22</h3>
@@ -62,7 +66,7 @@
                             <p class="por">R$ 899,99</p>
                             <p class="de">R$ 1199,99</p>
                         </div>
-                        <button class="btn">Comprar</button>
+                        <a href="./produtos-detalhamento/AdidasUltraboost22.html" class="btn">Ver Detalhes</a>
                     </div>
 
                 </div>
@@ -70,7 +74,8 @@
                     <div class="header">
                         <span class="badge-porcentagem">19% OFF</span>
                         <span class="badge-categoria">Basketball</span>
-                        <img src="./imagens/rapaz">
+                        <img
+                            src="./imagens/produtos/AirJordan1RetroHigh/Vermelho/Air Jordan 1 Retro High - Vermelho-3.jpg">
                     </div>
                     <div class="body">
                         <h3>Jordan 1 Retro High</h3>
@@ -79,7 +84,7 @@
                             <p class="por">R$ 1299,99</p>
                             <p class="de">R$ 1599,99</p>
                         </div>
-                        <button class="btn">Comprar</button>
+                        <a href="./produtos-detalhamento/Jordan1RetroHigh.html" class="btn">Ver Detalhes</a>
                     </div>
 
                 </div>
@@ -87,16 +92,16 @@
                     <div class="header">
                         <span class="badge-porcentagem">25% OFF</span>
                         <span class="badge-categoria">Lifestyle</span>
-                        <img src="./imagens/rapaz">
+                        <img src="./imagens/produtos/PumaRS-X/Cinza/Puma RS-X - Cinza-2.jpg">
                     </div>
                     <div class="body">
                         <h3>Puma RS-X</h3>
                         <p>Tênis casual com tecnologia Air Max para máximo conforto</p>
                         <div class="precificacao">
-                            <p class="por">R$ 599,99</p>
-                            <p class="de">R$ 799,99</p>
+                            <p class="por">R$ 499,99</p>
+                            <p class="de">R$ 599,99</p>
                         </div>
-                        <button class="btn">Comprar</button>
+                        <a href="./produtos-detalhamento/PumaRS-X.html" class="btn">Ver Detalhes</a>
                     </div>
 
                 </div>
@@ -104,16 +109,16 @@
                     <div class="header">
                         <span class="badge-porcentagem">20% OFF</span>
                         <span class="badge-categoria">Casual</span>
-                        <img src="./imagens/rapaz">
+                        <img src="./imagens/produtos/NewBalance990v5/Bege - Azul - Roxo/Bege-Roxo/Roxo-1.jpg">
                     </div>
                     <div class="body">
                         <h3>New Balance 990v5</h3>
                         <p>Tênis lifestyle com design futurista e cores vibrantes</p>
                         <div class="precificacao">
-                            <p class="por">R$ 499,99</p>
-                            <p class="de">R$ 599,99</p>
+                            <p class="por">R$ 799,99</p>
+                            <p class="de">R$ 999,99</p>
                         </div>
-                        <button class="btn">Comprar</button>
+                        <a href="./produtos-detalhamento/NewBalance.html" class="btn">Ver Detalhes</a>
                     </div>
 
                 </div>
@@ -121,7 +126,7 @@
                     <div class="header">
                         <span class="badge-porcentagem">25% OFF</span>
                         <span class="badge-categoria">Skate</span>
-                        <img src="./imagens/rapaz">
+                        <img src="./imagens/produtos/VansOldSkool/Vans Old Skoo-2.jpg">
                     </div>
                     <div class="body">
                         <h3>Vans Old Skool</h3>
@@ -130,7 +135,7 @@
                             <p class="por">R$ 299,99</p>
                             <p class="de">R$ 399,99</p>
                         </div>
-                        <button class="btn">Comprar</button>
+                        <a href="./produtos-detalhamento/VansOldSkool.html" class="btn">Ver Detalhes</a>
                     </div>
                 </div>
             </div>
