--- a/contato.html
+++ b/contato.html
@@ -4,22 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro</title>
+    <title>Contato</title>
+    <link rel="shortcut icon" href="./imagens/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/contato.css">
     <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/contato.css">
 </head>
 
 <body>
     <header>
-        <img src="./imagens/rapaz" alt="logo">
+        <img class="logo" src="./imagens/logo.svg" alt="logo">
+        <input type="checkbox" id="menu-toggle">
+        <label for="menu-toggle" class="menu-icon">&#9776;</label>
         <nav>
-            <a href="">Início</a>
+            <a href="./home.html">Início</a>
             <a href="./produtos.html">Produtos</a>
             <a href="./noticias.html">Notícias</a>
             <a href="./cadastro.html">Cadastro</a>
             <a href="./contato.html">Contato</a>
+            <a href="./sobreProjeto.html">Sobre o Projeto</a>
         </nav>
     </header>
     <main>
@@ -60,13 +64,13 @@
                         </div>
                         <div>
                             <h5>Telefone</h5>
-                            <p>(11) 9999-9999</p>
-                            <p>(11) 8888-8888</p>
+                            <p>(28) 9999-9999</p>
+                            <p>(28) 8888-8888</p>
                         </div>
                         <div>
                             <h5>Endereço</h5>
                             <p>Rua dos Tênis, 123</p>
-                            <p>Vila Sneaker - São Paulo, SP</p>
+                            <p>Vila Sneaker - Alegre, ES</p>
                             <p>CEP: 01234-567</p>
                         </div>
                         <div>
@@ -86,11 +90,11 @@
                         <div>
                             <h5>Qual o prazo de entrega?</h5>
                             <p>O prazo varia de 3 a 7 dias úteis, dependendo da sua localização.</p>
-                            <p>Vila Sneaker - São Paulo, SP</p>
+                            <p>Vila Sneaker - Alegre, ES</p>
                         </div>
                         <div>
                             <h5>Vocês têm loja física?</h5>
-                            <p>Sim! Nossa loja fica na Rua dos Tênis, 123 - Vila Sneaker, São Paulo.</p>
+                            <p>Sim! Nossa loja fica na Rua dos Tênis, 123 - Vila Sneaker, Espiríto Santo.</p>
                         </div>
                     </div>
                     <div class="atendimento">
