--- a/cadastro.html
+++ b/cadastro.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
+    <link rel="shortcut icon" href="./imagens/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/cadastro.css">
@@ -13,23 +14,25 @@
 
 <body>
     <header>
-        <img src="./imagens/rapaz" alt="logo">
+        <img class="logo" src="./imagens/logo.svg" alt="logo">
+        <input type="checkbox" id="menu-toggle">
+        <label for="menu-toggle" class="menu-icon">&#9776;</label>
         <nav>
-            <a href="">Início</a>
+            <a href="./home.html">Início</a>
             <a href="./produtos.html">Produtos</a>
             <a href="./noticias.html">Notícias</a>
             <a href="./cadastro.html">Cadastro</a>
             <a href="./contato.html">Contato</a>
+            <a href="./sobreProjeto.html">Sobre o Projeto</a>
         </nav>
     </header>
     <main>
         <section>
-            <div class="container">
-                <div class="destaque">
+            <div class="destaque">
                     <h1>Cadastro de Cliente</h1>
                     <p>Faça seu cadastro e aproveite ofertas exclusivas e frete grátis!</p>
                 </div>
-
+            <div class="container">
                 <div>
                     <form class="formulario">
                         <h2>Informações Pessoais</h2>
@@ -92,22 +95,42 @@
 
                 <div class="grupo-ofertas">
                     <div class="ofertas">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            class="lucide lucide-gift-icon lucide-gift">
+                            <rect x="3" y="8" width="18" height="4" rx="1" />
+                            <path d="M12 8v13" />
+                            <path d="M19 12v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-7" />
+                            <path d="M7.5 8a2.5 2.5 0 0 1 0-5A4.8 8 0 0 1 12 8a4.8 8 0 0 1 4.5-5 2.5 2.5 0 0 1 0 5" />
+                        </svg>
                         <h5>Ofertas Exclusivas</h5>
                         <p>Descontos especiais para clientes cadastrados</p>
                     </div>
                     <div class="ofertas">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            class="lucide lucide-truck-icon lucide-truck">
+                            <path d="M14 18V6a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2v11a1 1 0 0 0 1 1h2" />
+                            <path d="M15 18H9" />
+                            <path d="M19 18h2a1 1 0 0 0 1-1v-3.65a1 1 0 0 0-.22-.624l-3.48-4.35A1 1 0 0 0 17.52 8H14" />
+                            <circle cx="17" cy="18" r="2" />
+                            <circle cx="7" cy="18" r="2" />
+                        </svg>
                         <h5>Frete Grátis</h5>
                         <p>Entrega gratuita em compras acima de R$ 299</p>
                     </div>
                     <div class="ofertas">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            class="lucide lucide-star-icon lucide-star">
+                            <path
+                                d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z" />
+                        </svg>
                         <h5>Programa de Pontos</h5>
                         <p>Acumule pontos e troque por descontos</p>
                     </div>
                 </div>
             </div>
-
-
-
         </section>
     </main>
     <footer>
