--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
                     <a class="btn" href="./produtos.html">Explorar coleção</a>
                 </div>
                 <div class="ilustracao">
-                    <img src="./imagens/produtos/PumaRS-X/Cinza/Puma RS-X - Cinza-1.jpg">
+                    <img src="./imagens/banner.png">
                 </div>
             </div>
             <div class="atendimentos">
