adicionado link do carrinho nas paginas de produtos e fazendo o formulario apontar pra pagina de carrinhos tambem

--- a/produtos-detalhamento/Jordan1RetroHigh.html
+++ b/produtos-detalhamento/Jordan1RetroHigh.html
@@ -24,6 +24,15 @@
             <a href="./../cadastro.html">Cadastro</a>
             <a href="./../contato.html">Contato</a>
             <a href="./../sobreProjeto.html">Sobre o Projeto</a>
+            <a href="./../carrinho.html">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="lucide lucide-shopping-cart-icon lucide-shopping-cart">
+                    <circle cx="8" cy="21" r="1" />
+                    <circle cx="19" cy="21" r="1" />
+                    <path d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12" />
+                </svg>
+            </a>
         </nav>
     </header>
     <main>
@@ -62,7 +71,7 @@
                             <li>Solado de borracha com padrão de tração circular</li>
                         </ul>
                     </div>
-                    <form action="#" method="POST">
+                    <form action="./../carrinho.html" method="POST">
                         <h3>Tamanhos Disponíveis</h3>
                         <div class="tamanhos">
                             <label>
