--- a/produtos-detalhamento/NewBalance.html
+++ b/produtos-detalhamento/NewBalance.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-     <header>
+    <header>
         <img class="logo" src="./../imagens/logo.svg" alt="logo">
         <input type="checkbox" id="menu-toggle">
         <label for="menu-toggle" class="menu-icon">&#9776;</label>
@@ -24,13 +24,23 @@
             <a href="./../cadastro.html">Cadastro</a>
             <a href="./../contato.html">Contato</a>
             <a href="./../sobreProjeto.html">Sobre o Projeto</a>
+            <a href="./../carrinho.html">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="lucide lucide-shopping-cart-icon lucide-shopping-cart">
+                    <circle cx="8" cy="21" r="1" />
+                    <circle cx="19" cy="21" r="1" />
+                    <path d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12" />
+                </svg>
+            </a>
         </nav>
     </header>
     <main>
         <section>
             <div class="container">
                 <div class="imagens">
-                    <img src="./../imagens/produtos/NewBalance990v5/Bege - Azul - Roxo/Bege-Roxo/Roxo-1.jpg" class="principal" />
+                    <img src="./../imagens/produtos/NewBalance990v5/Bege - Azul - Roxo/Bege-Roxo/Roxo-1.jpg"
+                        class="principal" />
                     <div class="complementares">
                         <img src="./../imagens/produtos/NewBalance990v5/Bege - Azul - Roxo/Bege-Roxo/Roxo-2.jpg" />
                         <img src="./../imagens/produtos/NewBalance990v5/Bege - Azul - Roxo/Bege-Roxo/Roxo.jpg" />
@@ -59,7 +69,7 @@
                             <li>Solado de borracha durável</li>
                         </ul>
                     </div>
-                    <form action="#" method="POST">
+                    <form action="./../carrinho.html" method="POST">
                         <h3>Tamanhos Disponíveis</h3>
                         <div class="tamanhos">
                             <label>
