verificando se é o metodo

--- a/produtos-detalhamento/PumaRS-X.html
+++ b/produtos-detalhamento/PumaRS-X.html
@@ -68,7 +68,7 @@
                             <li>Solado de borracha resistente à abrasão</li>
                         </ul>
                     </div>
-                    <form action="./../carrinho.html" method="POST">
+                    <form action="./../carrinho.html" method="GET">
                         <h3>Tamanhos Disponíveis</h3>
                         <div class="tamanhos">
                             <label>
