trocando metodo http para renderizar ao clicar no botao de adicionar ao carrinho

--- a/produtos-detalhamento/AdidasUltraboost22.html
+++ b/produtos-detalhamento/AdidasUltraboost22.html
@@ -69,7 +69,7 @@
                             <li>Sistema de amarração tradicional</li>
                         </ul>
                     </div>
-                    <form action="./../carrinho.html" method="POST">
+                    <form action="./../carrinho.html" method="GET">
                         <h3>Tamanhos Disponíveis</h3>
                         <div class="tamanhos">
                             <label>
