--- a/produtos-detalhamento/nike-air-270.html
+++ b/produtos-detalhamento/nike-air-270.html
@@ -71,7 +71,7 @@
                             <li>Solado de borracha com padrão de tração</li>
                         </ul>
                     </div>
-                    <form action="./../carrinho.html" method="POST">
+                    <form action="./../carrinho.html" method="GET">
                         <h3>Tamanhos Disponíveis</h3>
                         <div class="tamanhos">
                             <label>
