--- a/produtos-detalhamento/VansOldSkool.html
+++ b/produtos-detalhamento/VansOldSkool.html
@@ -69,7 +69,7 @@
                             <li>Solado Waffle de borracha para tração e durabilidade</li>
                         </ul>
                     </div>
-                    <form action="./../carrinho.html" method="POST">
+                    <form action="./../carrinho.html" method="GET">
                         <h3>Tamanhos Disponíveis</h3>
                         <div class="tamanhos">
                             <label>
